--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "express": "~4.13.1",
     "knex": "^0.11.7",
     "locus": "^1.2.0",
+    "method-override": "^2.3.6",
     "morgan": "~1.6.1",
     "passport": "^0.3.2",
     "passport-linkedin": "^1.0.0",
+    "passport-linkedin-oauth2": "^1.4.1",
     "serve-favicon": "~2.3.0"
   }
 }
